[package]
name = "ecrecover"
version = "0.1.0"
authors = ["John Newby <john@newby.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
c_vec = "1.3.3"
ethcore-builtin = { path = "../parity-ethereum/ethcore/builtin" }
lazy_static = "1.3.0"
libc = "0.2.60"
parity-bytes = "0.1.0"
rustler = "0.20.0"

[lib]
crate-type = ["cdylib"]